{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 52,
  "lineage": "afaf7aa4-17a3-ca79-378a-f268e5bbdc74",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:925460820894:loadbalancer/example-elb",
            "availability_zones": [
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "example-elb-60040330.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "example-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0e25ba9cac70cf9c3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "example-elb",
            "security_groups": [
              "sg-0581fdd040f821124"
            ],
            "source_security_group": "925460820894/elb_sg",
            "source_security_group_id": "sg-0581fdd040f821124",
            "subnets": [
              "subnet-0938a9ac623aeafbb"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_instance.web",
            "aws_security_group.sg_elb",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0998bf58313ab53da",
            "arn": "arn:aws:ec2:us-east-2:925460820894:instance/i-0e25ba9cac70cf9c3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e25ba9cac70cf9c3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-051cc056f9d18eabc",
            "private_dns": "ip-192-168-1-66.us-east-2.compute.internal",
            "private_ip": "192.168.1.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-077e0c85a010c4c0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0938a9ac623aeafbb",
            "tags": {
              "Name": "elb-example-shanti"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0581fdd040f821124"
            ]
          },
          "depends_on": [
            "aws_security_group.sg_elb",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a78299cf6aea6bbc",
            "owner_id": "925460820894",
            "tags": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-000aa4e29c6b4b45e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-009e040b7fe21d244",
            "owner_id": "925460820894",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a78299cf6aea6bbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-000aa4e29c6b4b45e"
          },
          "depends_on": [
            "aws_internet_gateway.InternetGateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTassociate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020694693e7b0936c",
            "route_table_id": "rtb-009e040b7fe21d244",
            "subnet_id": "subnet-0938a9ac623aeafbb"
          },
          "depends_on": [
            "aws_route_table.RouteTable",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925460820894:security-group/sg-04f392022a634705e",
            "description": "Allow mentioned port in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f392022a634705e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance_sg",
            "name_prefix": null,
            "owner_id": "925460820894",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-000aa4e29c6b4b45e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925460820894:security-group/sg-0581fdd040f821124",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0581fdd040f821124",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": null,
            "owner_id": "925460820894",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-000aa4e29c6b4b45e"
          },
          "depends_on": [
            "aws_internet_gateway.InternetGateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925460820894:subnet/subnet-0938a9ac623aeafbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0938a9ac623aeafbb",
            "map_public_ip_on_launch": false,
            "owner_id": "925460820894",
            "tags": {
              "Name": "Subnet1"
            },
            "vpc_id": "vpc-000aa4e29c6b4b45e"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:925460820894:vpc/vpc-000aa4e29c6b4b45e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a2062f486f3d0111",
            "default_route_table_id": "rtb-0d566cf74371fa9f0",
            "default_security_group_id": "sg-074769f35858c5bd3",
            "dhcp_options_id": "dopt-7e14c315",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000aa4e29c6b4b45e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d566cf74371fa9f0",
            "owner_id": "925460820894",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}